--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,6 @@ on:
             - main
             - beta
 
-env:
-    CI: true
-
 jobs:
     version:
         timeout-minutes: 15
@@ -22,10 +19,10 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   registry-url: 'https://registry.npmjs.org'
                   cache: 'npm'
-            - run: npm ci
+            - run: npm i
 
             - name: Release
-              run: npm run release
+              run: npx semantic-release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
