--- a/examples/lit/package.json
+++ b/examples/lit/package.json
@@ -1,19 +1,19 @@
 {
-	"name": "master-css-lit-with-just-in-time",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"lit": "^2.6.1"
-	},
-	"devDependencies": {
-		"typescript": "^5.0.2",
-		"vite": "^4.3.2",
-		"@master/css": ""
-	}
+    "name": "master-css-lit-with-just-in-time",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "lit": "^2.7.5",
+        "@master/css": ""
+    },
+    "devDependencies": {
+        "typescript": "^5.0.2",
+        "vite": "^4.3.2"
+    }
 }
