--- a/examples/next.js-with-ahead-of-time/package.json
+++ b/examples/next.js-with-ahead-of-time/package.json
@@ -10,12 +10,14 @@
     },
     "dependencies": {
         "@master/css.webpack": "",
-        "@types/node": "^18.16.3",
-        "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.1",
-        "next": "^13.4.1",
+        "@types/node": "^20.2.5",
+        "@types/react": "^18.2.8",
+        "@types/react-dom": "^18.2.4",
+        "eslint": "^8.42.0",
+        "eslint-config-next": "^13.4.4",
+        "next": "^13.4.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "typescript": "^5.0.4"
+        "typescript": "^5.1.3"
     }
 }
