--- a/examples/next.js-with-progressive-rendering/package.json
+++ b/examples/next.js-with-progressive-rendering/package.json
@@ -9,16 +9,16 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@types/node": "18.16.3",
-		"@types/react": "18.2.0",
-		"@types/react-dom": "18.2.1",
-		"eslint": "8.39.0",
-		"eslint-config-next": "13.3.4",
-		"next": "^13.4.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"typescript": "5.0.4",
+		"@master/css": "",
 		"@master/css.react": "",
-		"@master/css": ""
+		"@types/node": "^20.2.5",
+		"@types/react": "^18.2.8",
+		"@types/react-dom": "^18.2.4",
+		"eslint": "^8.42.0",
+		"eslint-config-next": "^13.4.4",
+		"next": "^13.4.4",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"typescript": "^5.1.3"
 	}
 }
